--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -22,5 +22,8 @@
             <li>1 (28-ounce)can good-quality tomato sauce</li>
             <li>3 ounces tomato paste (half a 6-ounce can)</li>
         </ul>
+
+        <p><a href=./lasagna.html>Return to top</a></p>
+        <p><a href=../index.html>Return to main page</a></p>
     </body>
 </html>
