--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -20,5 +20,8 @@
             <li>1 lb. ground pork</li>
             <li>6 ounces luncheon meat minced</li>
         </ul>
+
+        <p><a href=./spaghetti.html>Return to top</a></p>
+        <p><a href=../index.html>Return to main page</a></p>
     </body>
 </html>
