--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href=./recipes/lasagna.html>Lasagna</a>
-        <a href=./recipes/spaghetti.html>Spaghetti</a>
-        
+        <ul>
+        <li><a href=./recipes/lasagna.html>Lasagna</a></li>
+        <li><a href=./recipes/spaghetti.html>Spaghetti</a></li>
+        <li><a href=./recipes/cake.html>Cake</a></li>
+        </ul>      
     </body>
 </html>
